# partial-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
partial-rs/: Cargo.toml
partial-rs-derive/: Cargo.toml
partial-rs-derive/src/: lib.rs  partial.rs
partial-rs/src/: lib.rs
