[package]
name = "partial-rs-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
proc-macro-crate = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
partial-rs = { path = "../partial-rs" } # cross-dependency for doctests
